--- a/src/app/billpay/invoice-list/invoice-list.component.html
+++ b/src/app/billpay/invoice-list/invoice-list.component.html
@@ -1,8 +1,8 @@
 <div class="purchase-order-container">
-    <ul class="breadcrumb">
+    <!-- <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
         <li class="last">Invoice</li>
-    </ul>
+    </ul> -->
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
             Invoice
@@ -17,10 +17,10 @@
             <button mat-icon-button (click)="sendEmail(2)" class="action-button-ed">
                 <mat-icon>email</mat-icon>
             </button>
-            <!-- 
+            
             <div class="search-submission">
-                <input matInput type="text" class="search" placeholder="search purchase order">
-            </div> -->
+                <input matInput type="text" class="search" placeholder="search invoice">
+            </div>
         </div>
     </div>
     <div id="table-container" class="table-wrapper">
@@ -30,20 +30,20 @@
                                   The actual rendered columns are set as a property on the row definition" -->
 
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef> # </th>
+                    <th mat-header-cell *matHeaderCellDef> S. No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
                 <!-- Bill To Vendor Column -->
                 <ng-container matColumnDef="invoicenumber">
                     <th mat-header-cell *matHeaderCellDef>Invoice Number</th>
-                    <td mat-cell *matCellDef="let element"> {{element.invoicenumber}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.invoiceNumber}} </td>
                 </ng-container>
 
                 <!-- Invoice Date Column -->
                 <ng-container matColumnDef="InvoiceDate">
                     <th mat-header-cell *matHeaderCellDef>Invoice Date</th>
-                    <td mat-cell *matCellDef="let element"> {{element.invoicedate}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.invoiceDate}} </td>
                 </ng-container>
 
 
@@ -51,7 +51,7 @@
                 <!-- Due Date Column -->
                 <ng-container matColumnDef="DueDate">
                     <th mat-header-cell *matHeaderCellDef>Due Date</th>
-                    <td mat-cell *matCellDef="let element"> {{element.duedate}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
                 </ng-container>
 
 
@@ -59,37 +59,59 @@
                 <!-- Consultant Column -->
                 <ng-container matColumnDef="Consultant">
                     <th mat-header-cell *matHeaderCellDef>Consultant</th>
-                    <td mat-cell *matCellDef="let element"> {{element.consultantname}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.consultantName}} </td>
                 </ng-container>
 
                 <!-- Net Term Column -->
                 <ng-container matColumnDef="NetTerm">
                     <th mat-header-cell *matHeaderCellDef>NetTerm</th>
-                    <td mat-cell *matCellDef="let element"> {{element.netterm}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.netTerm}} </td>
                 </ng-container>
 
                 <!-- Number Of Hours Column -->
                 <ng-container matColumnDef="NoOfHours">
                     <th mat-header-cell *matHeaderCellDef>No. Of Hours</th>
-                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.numberofhours}} </td>
+                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.numberOfHours}} </td>
                 </ng-container>
 
                 <!-- Rate Column -->
                 <ng-container matColumnDef="Rate">
                     <th mat-header-cell *matHeaderCellDef>Rate</th>
-                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.hourlyrate}} </td>
+                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.hourlyRate}} </td>
                 </ng-container>
 
                 <!-- Invoice Value Column -->
                 <ng-container matColumnDef="InvoiceValue">
                     <th mat-header-cell *matHeaderCellDef>Invoice Value</th>
-                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.invoicevalue}} </td>
+                    <td mat-cell *matCellDef="let element" class="align-right"> {{element.invoiceValue}} </td>
                 </ng-container>
 
                 <!-- Status Column -->
                 <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
-                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-stroked-button color="primary">{{element.status}}</button>
+                    </td>
+                </ng-container>
+
+                <!-- Invoice Column -->
+                <ng-container matColumnDef="Invoice">
+                    <th mat-header-cell *matHeaderCellDef>Invoice</th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button (click)="download(element)" class="action-button-ed">
+                            <mat-icon>download</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+
+                <!-- Mail Column -->
+                <ng-container matColumnDef="Mail">
+                    <th mat-header-cell *matHeaderCellDef>Mail</th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button (click)="sendEmail(element)" class="action-button-ed">
+                            <mat-icon>email</mat-icon>
+                        </button>
+                    </td>
                 </ng-container>
 
                 <!-- Action Column -->
@@ -99,15 +121,6 @@
                         <button mat-icon-button (click)="editInvoice(element)" class="action-button-ed">
                             <mat-icon>edit</mat-icon>
                         </button>
-
-                        <button mat-icon-button (click)="download(element)" class="action-button-ed">
-                            <mat-icon>download</mat-icon>
-                        </button>
-
-                        <button mat-icon-button (click)="sendEmail(element)" class="action-button-ed">
-                            <mat-icon>email</mat-icon>
-                        </button>
-
 
                         <button mat-icon-button (click)="deleteInvoice(element)" class="action-button-ed">
                             <mat-icon>delete</mat-icon>
