open reqs matching remove

--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -100,7 +100,7 @@
                         <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"  style=" width: 3% ">VIEW </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="Matching">
+                    <!-- <ng-container matColumnDef="Matching">
                         <th mat-header-cell *matHeaderCellDef style=" width: 3% "> Matching </th>
                         <td mat-cell *matCellDef="let element">
                             <select name="cars" id="cars">
@@ -110,7 +110,7 @@
                                 <option value="audi">Audi</option>
                             </select>
                         </td>
-                    </ng-container>
+                    </ng-container> -->
     
                     <!-- Source Column mat-sort-header sortActionDescription="Sort by Source"-->
                     <ng-container matColumnDef="source">
