--- a/src/app/billpay/invoice-list/invoice-list.component.html
+++ b/src/app/billpay/invoice-list/invoice-list.component.html
@@ -99,7 +99,7 @@
                     <th mat-header-cell *matHeaderCellDef>Invoice</th>
                     <td mat-cell *matCellDef="let element">
                         <button mat-icon-button (click)="download(element)" class="action-button-ed">
-                            <mat-icon>download</mat-icon>
+                            <mat-icon>visibility</mat-icon>
                         </button>
                     </td>
                 </ng-container>
