--- a/src/app/billpay/invoice-list/add-invoice/add-invoice.component.html
+++ b/src/app/billpay/invoice-list/add-invoice/add-invoice.component.html
@@ -143,7 +143,7 @@
     <div class="form-button-right">
         <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
         <button mat-raised-button color="primary" (click)="onSubmit()">
-            Send add-email
+            Submit
         </button>
     </div>
 </mat-card>
