--- a/src/app/billpay/invoice-list/composemail/composemail.component.html
+++ b/src/app/billpay/invoice-list/composemail/composemail.component.html
@@ -86,6 +86,6 @@
 <div class="form-action-buttons">
     <button mat-raised-button (click)="onCancel()">Cancel</button>
     <button mat-raised-button color="primary" (click)="onSubmit()">
-        Submit
+        Send
     </button>
 </div>
