--- a/src/app/billpay/invoice-list/invoice-list.component.html
+++ b/src/app/billpay/invoice-list/invoice-list.component.html
@@ -1,8 +1,4 @@
 <div class="purchase-order-container">
-    <!-- <ul class="breadcrumb">
-        <li><a (click)="navigateToDashboard()">Home</a></li>
-        <li class="last">Invoice</li>
-    </ul> -->
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
             Invoice
@@ -110,6 +106,16 @@
                     <td mat-cell *matCellDef="let element">
                         <button mat-icon-button (click)="sendEmail(element)" class="action-button-ed">
                             <mat-icon>email</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+
+                <!-- Payment Column-->
+                <ng-container matColumnDef="Payment">
+                    <th mat-header-cell *matHeaderCellDef>Payment</th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button (click)="pay(element)" class="action-button-ed">
+                            <mat-icon>payments</mat-icon>
                         </button>
                     </td>
                 </ng-container>
