--- a/src/app/billpay/receipt-list/add-receipt/add-receipt.component.html
+++ b/src/app/billpay/receipt-list/add-receipt/add-receipt.component.html
@@ -10,82 +10,53 @@
     <form [formGroup]="receiptForm" (ngSubmit)="onSubmit()" class="receipt-form">
         <div class="form">
             <div class="form-column-left">
-                <!-- Invoice Number -->
-                <mat-form-field appearance="fill">
-                    <mat-label>Serial Number</mat-label>
-                    <input matInput formControlName="serialno" maxlength="12" readonly>
-                </mat-form-field>
-
-                <!-- Invoice Number -->
-                <mat-form-field appearance="fill">
-                    <mat-label>Date</mat-label>
-                    <input matInput formControlName="serialno" maxlength="12" readonly>
-                </mat-form-field>
-
-                <!-- Select Vendor -->
-                <mat-form-field appearance="fill">
-                    <mat-label>Select Vendor</mat-label>
-                    <mat-select formControlName="vendor">
-                        <!-- <mat-option *ngFor="let option of  vendorCompanyArr" [value]="option.id">{{ option.company.trim() }}</mat-option> -->
-                    </mat-select>
-                    <mat-error *ngIf="receiptForm.get('vendor')!.hasError('required')"> Vendor is required</mat-error>
-                </mat-form-field>
-
-                <!-- Amount -->
+                <!-- Amount Received -->
                 <mat-form-field>
-                    <mat-label>Amount</mat-label>
-                    <input matInput formControlName="amount">
-                    <mat-error *ngIf="receiptForm.get('amount')!.hasError('required')"> Amount is required</mat-error>
+                    <mat-label>Amount Received</mat-label>
+                    <input matInput formControlName="amountReceived">
+                    <mat-error *ngIf="receiptForm.get('amountReceived')!.hasError('required')"> Amount Received is required</mat-error>
                 </mat-form-field>
 
-                <!-- Select Transaction Type -->
+                <!-- Payment Date -->
                 <mat-form-field appearance="fill">
-                    <mat-label>Select Transaction Type</mat-label>
-                    <mat-select formControlName="transactiontype">
+                    <mat-label>Payment Date</mat-label>
+                    <input matInput [matDatepicker]="picker1" formControlName="paymentDate"/>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1></mat-datepicker>
+                    <mat-error *ngIf="receiptForm.get('paymentDate')!.hasError('required')"> Payment Date is required</mat-error>
+                </mat-form-field>
+
+                <!-- Payment Mode -->
+                <mat-form-field appearance="fill">
+                    <mat-label>Payment Mode</mat-label>
+                    <mat-select formControlName="paymentMode">
                         <mat-option value="Cheque">Cheque</mat-option>
                         <mat-option value="Online Transfer">Online Transfer</mat-option>
                     </mat-select>
-                    <mat-error *ngIf="receiptForm.get('transactiontype')!.hasError('required')"> Transaction Type is required</mat-error>
+                    <mat-error *ngIf="receiptForm.get('paymentMode')!.hasError('required')"> Payment Mode is required</mat-error>
                 </mat-form-field>
 
             </div>
             <div class="form-column-right">
+                <!-- Cheque Number -->
+                <mat-form-field appearance="fill" *ngIf="receiptForm.get('paymentMode')?.value === 'Cheque'">
+                    <mat-label>Cheque Number</mat-label>
+                    <input matInput formControlName="chequeNumber">
+                </mat-form-field>
+            
+                <!-- Cheque Date -->
+                <mat-form-field appearance="fill" *ngIf="receiptForm.get('paymentMode')?.value === 'Cheque'">
+                    <mat-label>Cheque Date</mat-label>
+                    <input matInput [matDatepicker]="picker" formControlName="chequeDate">
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+
                 <!-- Remarks -->
                 <mat-form-field appearance="fill">
                     <mat-label>Remarks</mat-label>
                     <input matInput formControlName="remarks">
                     <mat-error *ngIf="receiptForm.get('remarks')!.hasError('required')"> Remarks is required</mat-error>
-                </mat-form-field>
-            
-            
-                <!-- Cheque Number -->
-                <mat-form-field appearance="fill" *ngIf="receiptForm.get('transactiontype')?.value === 'Cheque'">
-                    <mat-label>Cheque Number</mat-label>
-                    <input matInput formControlName="chequeno">
-                    <mat-error *ngIf="receiptForm.get('chequeno')!.hasError('required')"> Check Number is required</mat-error>
-                </mat-form-field>
-            
-                <!-- Cheque Date -->
-                <mat-form-field appearance="fill" *ngIf="receiptForm.get('transactiontype')?.value === 'Cheque'">
-                    <mat-label>Cheque Date</mat-label>
-                    <input matInput [matDatepicker]="picker" formControlName="chequedate">
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                    <mat-error *ngIf="receiptForm.get('chequedate')!.hasError('required')"> Check Date is required</mat-error>
-                </mat-form-field>
-            
-                <!-- Bank Name -->
-                <mat-form-field appearance="fill" *ngIf="receiptForm.get('transactiontype')?.value === 'Cheque'">
-                    <mat-label>Bank Name</mat-label>
-                    <input matInput formControlName="bankname">
-                    <mat-error *ngIf="receiptForm.get('bankname')!.hasError('required')"> Bank Name is required</mat-error>
-                </mat-form-field>
-            
-                <!-- Online Id -->
-                <mat-form-field appearance="fill" *ngIf="receiptForm.get('transactiontype')?.value === 'Cheque'">
-                    <mat-label>Online Id</mat-label>
-                    <input matInput formControlName="onlineid">
-                    <mat-error *ngIf="receiptForm.get('onlineid')!.hasError('required')"> Online Id is required</mat-error>
                 </mat-form-field>
             
             </div>
@@ -96,3 +67,92 @@
         <button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
     </div>
 </mat-card>
+
+<div id="table-container" class="table-wrapper">
+    <section class="mat-elevation-z8 purchase-order-table-style">
+        <table mat-table [dataSource]="dataSource" oncopy="return false">
+            <!--- Note that these columns can be defined in any order.
+                              The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- <ng-container matColumnDef="SerialNum">
+                <th mat-header-cell *matHeaderCellDef> S. No </th>
+                <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
+            </ng-container> -->
+
+            <!-- Bill To Vendor Column -->
+            <!-- <ng-container matColumnDef="invoicenumber">
+                <th mat-header-cell *matHeaderCellDef>Invoice Number</th>
+                <td mat-cell *matCellDef="let element"> {{element.invoiceNumber}} </td>
+            </ng-container> -->
+
+            <!-- Invoice Date Column -->
+            <!-- <ng-container matColumnDef="InvoiceDate">
+                <th mat-header-cell *matHeaderCellDef>Invoice Date</th>
+                <td mat-cell *matCellDef="let element"> {{element.invoiceDate}} </td>
+            </ng-container> -->
+
+            <!-- Due Date Column -->
+            <!-- <ng-container matColumnDef="DueDate">
+                <th mat-header-cell *matHeaderCellDef>Due Date</th>
+                <td mat-cell *matCellDef="let element"> {{element.dueDate}} </td>
+            </ng-container> -->
+
+            <!-- Consultant Column -->
+            <!-- <ng-container matColumnDef="Consultant">
+                <th mat-header-cell *matHeaderCellDef>Consultant</th>
+                <td mat-cell *matCellDef="let element"> {{element.consultantName}} </td>
+            </ng-container> -->
+
+            <!-- Net Term Column -->
+            <!-- <ng-container matColumnDef="NetTerm">
+                <th mat-header-cell *matHeaderCellDef>NetTerm</th>
+                <td mat-cell *matCellDef="let element"> {{element.netTerm}} </td>
+            </ng-container> -->
+
+            <!-- Number Of Hours Column -->
+            <!-- <ng-container matColumnDef="NoOfHours">
+                <th mat-header-cell *matHeaderCellDef>No. Of Hours</th>
+                <td mat-cell *matCellDef="let element" class="align-right"> {{element.numberOfHours}} </td>
+            </ng-container> -->
+
+            <!-- Rate Column -->
+            <!-- <ng-container matColumnDef="Rate">
+                <th mat-header-cell *matHeaderCellDef>Rate</th>
+                <td mat-cell *matCellDef="let element" class="align-right"> {{element.hourlyRate}} </td>
+            </ng-container> -->
+
+            <!-- Invoice Value Column -->
+            <!-- <ng-container matColumnDef="InvoiceValue">
+                <th mat-header-cell *matHeaderCellDef>Invoice Value</th>
+                <td mat-cell *matCellDef="let element" class="align-right"> {{element.invoiceValue}} </td>
+            </ng-container> -->
+
+            <!-- Status Column -->
+            <!-- <ng-container matColumnDef="Status">
+                <th mat-header-cell *matHeaderCellDef>Status</th>
+                <td mat-cell *matCellDef="let element"> 
+                    <button mat-stroked-button color="primary">{{element.status}}</button>
+                </td>
+            </ng-container> -->
+
+            <!-- Invoice Column -->
+
+            <!-- Action Column -->
+            <ng-container matColumnDef="Action" class="actions">
+                <th mat-header-cell *matHeaderCellDef>Action</th>
+                <td mat-cell *matCellDef="let element" class="action-buttons">
+                    <button mat-icon-button (click)="editReceipt(element)" class="action-button-ed">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+
+                    <button mat-icon-button (click)="deleteReceipt(element)" class="action-button-ed">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+            <!-- table ROW -->
+            <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+        </table>
+    </section>
+</div>
