--- a/src/app/billpay/receipt-list/add-receipt/add-receipt.component.scss
+++ b/src/app/billpay/receipt-list/add-receipt/add-receipt.component.scss
@@ -34,7 +34,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    .fg-div{
+
+    .fg-div {
         width: 100%;
         display: contents;
     }
@@ -51,10 +52,10 @@
         display: contents;
     }
 
-    .fg-div{
+    .fg-div {
         width: 100%;
         display: contents;
-      }
+    }
 }
 
 
@@ -94,33 +95,6 @@
     padding-right: 45px;
 }
 
-ul {
-    padding-inline-start: 10px;
-}
-
-ul.breadcrumb {
-    list-style: none;
-}
-
-ul.breadcrumb li {
-    display: inline;
-}
-
-ul.breadcrumb li+li:before {
-    color: black;
-    content: "/\00a0";
-}
-
-ul.breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
-}
-
-ul.breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
-}
-
 .mat-card {
     max-width: 96%;
     padding-top: 20px;
@@ -145,14 +119,17 @@ ul.breadcrumb li a:hover {
 .center-card {
     margin: 0 auto;
     padding: 16px;
-    height: 80vh;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    height: max-content;
+    max-height: 85vh;
+    overflow-y: auto;
+    box-shadow: none;
 }
 
 .receipt-form {
-    height: 75vh;
+    height: max-content;
+    max-height: 85vh;
     overflow: auto;
 }
 
@@ -257,7 +234,7 @@ mat-mdc-menu-content {
 }
 
 .mdc-text-field__input::-webkit-calendar-picker-indicator {
-  display: block !important;
+    display: block !important;
 }
 
 .header-container-closure-details {
@@ -270,4 +247,71 @@ mat-mdc-menu-content {
     z-index: 99999;
     top: 0;
     overflow: hidden;
+}
+
+.purchase-order-container {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 68px);
+  }
+  
+  .table-wrapper {
+    flex: 1;
+    width: 100%;
+    overflow: auto;
+  }
+  
+  table {
+    width: 100%;
+  }
+  
+  .mat-mdc-header-row {
+    background-color: rgb(213, 231, 231);
+    position: sticky;
+    top: 0;
+  }
+  
+  thead {
+    position: sticky;
+    top: 0;
+  }
+  
+  tbody {
+    text-align: left;
+  }
+  
+  .mat-sort-header-arrow {
+    color: #1a1717;
+  }
+  
+  .mat-mdc-column {
+    border-right: 1px solid currentColor;
+  }
+  
+  .mat-column-Designation {
+    width: 32px;
+    border-right: 1px solid lightgray;
+    padding-right: 24px;
+  }
+  
+  .mat-column-Name {
+    border-right: 1px solid lightgray;
+  }
+  
+  .mat-column-SerialNum,
+  .mat-column-InvoiceDate,
+  .mat-column-ConsultantName,
+  .mat-column-DueDate,
+  .mat-column-invoicenumber,
+  .mat-column-Consultant,
+  .mat-column-NetTerm,
+  .mat-column-NoOfHours,
+  .mat-column-Rate,
+  .mat-column-InvoiceValue,
+  .mat-column-Status,
+  .mat-column-Invoice,
+  .mat-column-Mail,
+  .mat-column-Payment,
+  .mat-column-Action {
+    border-right: 1px solid lightgray;
   }
