--- a/src/app/billpay/receipt-list/receipt-list.component.html
+++ b/src/app/billpay/receipt-list/receipt-list.component.html
@@ -1,17 +1,17 @@
 <div class="receipt-container">
-    <ul class="breadcrumb">
+    <!-- <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
         <li class="last">Receipt</li>
-    </ul>
+    </ul> -->
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
             Receipts
         </span>
 
         <div class="receipt-actions">
-            <button  matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-receipt" (click)="addReceipt()">
+            <!-- <button  matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-receipt" (click)="addReceipt()">
                 <mat-icon class="item-icon">add_circle</mat-icon>
-            </button>
+            </button> -->
 
             <div class="search-receipt">
                 <input matInput type="text" class="search" placeholder="search receipt" (keyup)="applyFilter($event)">
