--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -67,12 +67,12 @@
                     </ng-container>
     
                     <!-- Visa Column mat-sort-header sortActionDescription="Sort by Visa" -->
-                    <!-- <ng-container matColumnDef="category_skill">
+                    <ng-container matColumnDef="category_skill">
                         <th mat-header-cell *matHeaderCellDef style="width: 13%">
                             Category </th>
                         <td mat-cell *matCellDef="let element"style="width: 13%">
                             {{ element?.category_skill | titlecase }} </td>
-                    </ng-container> -->
+                    </ng-container>
     
                     <!-- Experience Column  sortActionDescription="Sort by Experience"-->
                     <ng-container matColumnDef="employment_type">
@@ -100,18 +100,29 @@
                         <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"  style=" width: 3% ">VIEW </td>
                     </ng-container>
 
+                    
+                    <!-- comments -->
+                    <ng-container matColumnDef="Comments">
+                        <th mat-header-cell *matHeaderCellDef style="width: 3%"> Comments </th>
+                        <td mat-cell *matCellDef="let element" style="width: 3%">
+                            <span class="action-buttons" >
+                                <button mat-icon-button class="action-button-ed" (click)="jobComments(element)">
+                                    <mat-icon >comment</mat-icon>
+                                </button>
+                                <span class="bold-text">({{ element?.commentCount || '0' }})</span>
+                            </span>
+                        </td>
+                    </ng-container>
+
                     <!-- <ng-container matColumnDef="Matching">
-                        <th mat-header-cell *matHeaderCellDef style=" width: 3% "> Matching </th>
+                        <th mat-header-cell *matHeaderCellDef style="width: 3%"> Matching </th>
                         <td mat-cell *matCellDef="let element">
-                            <select name="cars" id="cars">
-                                <option value="volvo">Volvo</option>
-                                <option value="saab">Saab</option>
-                                <option value="mercedes">Mercedes</option>
-                                <option value="audi">Audi</option>
-                            </select>
+                            <button mat-raised-button color="primary" style="width: max-content; height: fit-content; padding: 4px !important;" (click)="matching(element)">
+                                check
+                            </button>
                         </td>
                     </ng-container> -->
-    
+                      
                     <!-- Source Column mat-sort-header sortActionDescription="Sort by Source"-->
                     <ng-container matColumnDef="source">
                         <th mat-header-cell *matHeaderCellDef
