--- a/src/app/usit/components/openreqs/openreqs.component.scss
+++ b/src/app/usit/components/openreqs/openreqs.component.scss
@@ -81,7 +81,9 @@ tbody {
 .mat-column-job_location,
 .mat-column-vendor,
 .mat-column-end_client,
+.mat-column-category_skill,
 .mat-column-Matching,
+.mat-column-Comments,
 .mat-column-JobDescription {
   border-right: 1px solid lightgray;
 }
@@ -92,10 +94,8 @@ tbody {
   align-items: center;
   justify-content: space-between;
   height: 48px;
-  background-color: white;
   top: 0;
   overflow: hidden;
-  // margin: 4px;
   background-color: rgb(228, 231, 234);
 }
 
@@ -120,9 +120,7 @@ tbody {
 }
 
 .hot-list-table-style {
-  // padding: 0 2px;
   width: 100%;
-  // max-height: calc(100% - 3px);
   overflow: auto;
   display: block;
 }
@@ -168,14 +166,6 @@ tbody {
   }
 }
 
-// @media screen and (min-width: 1850px) {
-//   .hot-list-table-style {
-//     width: 100%;
-//     height: calc(100% - 8px);
-//     overflow: auto;
-//   }
-// }
-
 .mat-mdc-header-row {
   height: 30px !important;
 }
@@ -212,6 +202,7 @@ ul.breadcrumb li:last-child {
     padding-top: 20px !important;
     padding-bottom: 8px;
   }
+
   .req-info {
     cursor: pointer;
     color: #4154f1;
@@ -233,7 +224,7 @@ ul.breadcrumb li:last-child {
   letter-spacing: var(--mat-paginator-container-text-tracking);
 }
 
-:host ::ng-deep.mat-paginator .mat-paginator-container{
+:host ::ng-deep.mat-paginator .mat-paginator-container {
   height: 36px;
 }
 
@@ -261,4 +252,30 @@ ul.breadcrumb li:last-child {
   padding: 0px !important;
   height: 24px;
   width: 24px;
+}
+
+.action-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
+  --mdc-icon-button-state-layer-size: 24px;
+  width: var(--mdc-icon-button-state-layer-size);
+  height: var(--mdc-icon-button-state-layer-size);
+  padding: 0px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+.bold-text {
+  font-weight: bold;
 }
