--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -109,7 +109,7 @@
                                 <button mat-icon-button class="action-button-ed" (click)="jobComments(element)">
                                     <mat-icon >comment</mat-icon>
                                 </button>
-                                <span class="bold-text">({{ element?.commentCount || '0' }})</span>
+                                <span class="bold-text">({{ element?.commentsCount || '0' }})</span>
                             </span>
                         </td>
                     </ng-container>
