--- a/src/app/usit/components/openreqs/openreqs.component.scss
+++ b/src/app/usit/components/openreqs/openreqs.component.scss
@@ -68,7 +68,7 @@ tbody {
   border-right: 1px solid lightgray;
   padding-right: 24px;
 }
-
+action-button-ed
 .mat-column-Name {
   border-right: 1px solid lightgray;
 }
