--- a/src/app/usit/components/openreqs/cpv-fpv-open-requirements/cpv-fpv-open-requirements.component.html
+++ b/src/app/usit/components/openreqs/cpv-fpv-open-requirements/cpv-fpv-open-requirements.component.html
@@ -23,7 +23,8 @@
 
                 <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 1%">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"
+                        style="width: 1%">
                         S.No </th>
                     <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
                 </ng-container>
@@ -33,7 +34,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"
                         style="width: 2%">Posted On</th>
                     <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
-                        date:'MM-dd-yyyy HH:mm'  }} </td>
+                        date:'MM-dd-yyyy HH:mm' }} </td>
                 </ng-container>
 
                 <!-- Title Column-->
@@ -42,50 +43,73 @@
                         style="width: 20%">
                         Title </th>
                     <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
-                                href="{{element?.job_source}}" target="_blank"
-                                >{{element?.job_title|titlecase}}</a>
+                                href="{{element?.job_source}}" target="_blank">{{element?.job_title|titlecase}}</a>
                         </span> </td>
                 </ng-container>
 
                 <!-- Category Column-->
                 <ng-container matColumnDef="category_skill">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category" style="width: 13%">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"
+                        style="width: 13%">
                         Category </th>
-                    <td mat-cell *matCellDef="let element"style="width: 13%">
+                    <td mat-cell *matCellDef="let element" style="width: 13%">
                         {{ element?.category_skill | titlecase }} </td>
                 </ng-container>
 
                 <!-- Emp Type Column-->
                 <ng-container matColumnDef="employment_type">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by EmpType" style="width: 3%"> Emp Type </th>
-                    <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by EmpType"
+                        style="width: 3%"> Emp Type </th>
+                    <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}}
+                    </td>
                 </ng-container>
 
                 <!-- Location Column-->
                 <ng-container matColumnDef="job_location">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Location"style="width: 10%"> Location </th>
-                    <td mat-cell *matCellDef="let element"style="width: 10%">{{element?.job_location | titlecase}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Location"
+                        style="width: 10%"> Location </th>
+                    <td mat-cell *matCellDef="let element" style="width: 10%">{{element?.job_location | titlecase}}
+                    </td>
                 </ng-container>
 
                 <!-- Vendor Column-->
                 <ng-container matColumnDef="vendor">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Vendor" style="width: 12%">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Vendor"
+                        style="width: 12%">
                         Vendor</th>
-                        <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%"> {{element?.vendor | titlecase}}
-                        </td>
+                    <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)"
+                        style="width: 12%"> {{element?.vendor | titlecase}}
+                    </td>
                 </ng-container>
 
                 <!-- Job Description Column-->
                 <ng-container matColumnDef="JobDescription">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by JobDescription" style=" width: 3% "> Job Description </th>
-                    <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"  style=" width: 3% ">VIEW </td>
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by JobDescription"
+                        style=" width: 3% "> Job Description </th>
+                    <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"
+                        style=" width: 3% ">VIEW </td>
                 </ng-container>
+
+                <!-- comments -->
+                <ng-container matColumnDef="comments">
+                    <th mat-header-cell *matHeaderCellDef style="width: 3%"> Comments </th>
+                    <td mat-cell *matCellDef="let element" style="width: 3%">
+                        <span class="action-buttons">
+                            <button mat-icon-button class="action-button-ed" (click)="jobComments(element)">
+                                <mat-icon>comment</mat-icon>
+                            </button>
+                            <span class="bold-text">({{ element?.commentsCount || '0' }})</span>
+                        </span>
+                    </td>
+                </ng-container>
+
 
                 <!-- Source Column-->
                 <ng-container matColumnDef="source">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source"
                         style="width: 3%">Source</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}} </td>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}}
+                    </td>
                 </ng-container>
 
                 <!-- table ROW -->
