--- a/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
+++ b/src/app/usit/components/openreqs/job-application-comments/job-application-comments.component.html
@@ -2,7 +2,7 @@
     <span class="header-text" mat-dialog-title id="mainHeaderTitle">
         {{data.title}} - {{data.jobData.posted_on}}
     </span>
-    <button mat-icon-button (click)="dialogRef.close()" class="btn-close" id="btnClose">
+    <button mat-icon-button (click)="onCancel()" class="btn-close" id="btnClose">
         <mat-icon>close</mat-icon>
     </button>
 </section>
@@ -29,12 +29,13 @@
                 <mat-form-field>
                     <mat-label>Status</mat-label>
                     <mat-select formControlName="issueType">
-                        <mat-option value="Missing Skills">Missing Skills</mat-option>
-                        <mat-option value="No Relevant Experience">No Relevant Experience</mat-option>
-                        <mat-option value="Need Job Specific Qualifications">Need Job Specific
-                            Qualifications</mat-option>
                         <mat-option value="Applied">Applied</mat-option>
-                        <mat-option value="Submitted">Submitted</mat-option>
+                        <mat-option value="Expired">Expired</mat-option>
+                        <mat-option value="Full time">Full time</mat-option>
+                        <mat-option value="Only Locals">Only Locals</mat-option>
+                        <mat-option value="Submitted">Submitted </mat-option>.
+                        <mat-option value="Skills Not Matching">Skills Not Matching</mat-option>Missing Skills
+                        <mat-option value="Visa is not matching">Visa is not matching</mat-option>
                     </mat-select>
                     <mat-error *ngIf="jobApplyCommentsForm.get('issueType').hasError('required')">Status is
                         Required
@@ -116,6 +117,22 @@
                 <td mat-cell *matCellDef="let element"> {{element?.createddate | date:'MM-dd-yyyy HH:mm'}}
                 </td>
             </ng-container>
+
+            
+                  <!-- Action Column -->
+                  <ng-container matColumnDef="Action">
+                    <th mat-header-cell *matHeaderCellDef> Action </th>
+                    <td mat-cell *matCellDef="let commnet" style="white-space: nowrap;">
+                      <span class="action-buttons">
+                        <button  mat-icon-button
+                          (click)="editComment(commnet)" class="action-button-ed">
+                          <mat-icon >edit</mat-icon>
+                        </button>
+                       
+                      </span>
+                    </td>
+                  </ng-container>
+            
 
             <!-- table columns ends  -->
             <!-- table ROW -->
