--- a/src/app/usit/components/vendor-management/client-information/add-client-information/add-client-information.component.html
+++ b/src/app/usit/components/vendor-management/client-information/add-client-information/add-client-information.component.html
@@ -17,7 +17,7 @@
                 <!-- Company Name -->
                 <mat-form-field appearance="fill">
                     <mat-label>Client</mat-label>
-                    <input matInput formControlName="client" maxlength="50"/>
+                    <input matInput formControlName="client" maxlength="50" />
                 </mat-form-field>
 
                 <!-- First Level Vendor -->
@@ -29,7 +29,7 @@
                 <!-- Second Level Vendor -->
                 <mat-form-field appearance="fill">
                     <mat-label>Second Level Vendor Name</mat-label>
-                    <input matInput formControlName="secondLevelVendor" maxlength="50"/>
+                    <input matInput formControlName="secondLevelVendor" maxlength="50" />
                 </mat-form-field>
 
             </div>
@@ -41,14 +41,22 @@
                 <mat-form-field appearance="fill">
                     <mat-label>Technology</mat-label>
                     <input matInput formControlName="technology" maxlength="50" />
-                    <mat-error *ngIf="tcvrForm.get('technology')!.hasError('required')">Technology is Required</mat-error>
+                    <mat-error *ngIf="tcvrForm.get('technology')!.hasError('required')">Technology is
+                        Required</mat-error>
                 </mat-form-field>
 
                 <!-- Careers -->
                 <mat-form-field appearance="fill">
                     <mat-label>Careers Page</mat-label>
                     <input matInput formControlName="careersPage" maxlength="150" />
-                    <mat-error *ngIf="tcvrForm.get('careersPage')!.hasError('required')"> Careers URL is required</mat-error>
+                    <mat-error *ngIf="tcvrForm.get('careersPage')!.hasError('required')"> Careers URL is
+                        required</mat-error>
+                </mat-form-field>
+
+                <!-- Feedback   -->
+                <mat-form-field appearance="fill">
+                    <mat-label>Comment</mat-label>
+                    <textarea formControlName="comments" rows="4" maxlength="500" matInput></textarea>
                 </mat-form-field>
 
             </div>
